<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:background="#FFC107">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="BMI值"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/show"
            app:layout_constraintEnd_toEndOf="@+id/show"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/show"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.269" />

        <TextView
            android:id="@+id/show"
            android:layout_width="85dp"
            android:layout_height="27dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:layout_marginBottom="32dp"
            android:text="0.00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <TextView
            android:id="@+id/lable1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/height"
            android:layout_width="150dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label2"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="150dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/label4"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="kg" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/cal"
         />

    <TextView
        android:id="@+id/sug1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sug"
        android:textSize="20dp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/sug2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="未知"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="30dp"/>

</LinearLayout>